# trivia

./: .gitignore  Answer-Key-July-2022.html  Answer-Key-Trivia-1-20-2020.ipynb  Answer-Key-Trivia-1-20-2020.slides.html  Answer-Key-Trivia-2-4-2021.html  Answer-Key-Trivia-2-4-2021.ipynb  Answer-Key-Trivia-2-4-2021.slides.html  April-2021.ipynb  April-Answers-2021.ipynb  April-Answers-2021.slides.html  CLAUDE.md  Dockerfile  July-2022.html  July-2022.slides.html  Makefile  March-2021-Answers.ipynb  March-2021-Answers.slides.html  March-2021.ipynb  Questions-Bank.ipynb  Questions-Bank.slides.html  README.md  REFACTORING_GUIDE.md  Survivor-Analysis.ipynb  TEST_SUITE_SUMMARY.md  Trivia-01-20-2021.ipynb  Trivia-01-20-2021.slides.html  Trivia-February-2021.ipynb  Trivia-February-2021.slides.html  Trivia-France-June-2022.ipynb  analytics.py  answers.md  answers_summer_trivia.ipynb  answers_summer_trivia.slides.html  assign_teams.py  db_initial_data.json  docker-compose.yml  init_trivia.py  manage.py  nginx.conf  package.json  (+7 more)
.github/: dependabot.yml
April-2021/: April-2021.slides.html
February-2021/: Answer-Key-February-2021.slides.html  February-2021.ipynb  February-2021.slides.html  Trivia-February-2021.slides.html
January-2021/: Answer-Key-January-2021.ipynb  Answer-Key-January-2021.slides.html  January-2021.ipynb  January-2021.slides.html
July-2022/: Answer-Key-July-2022.ipynb  Answer-Key-July-2022.slides.html  July-2022.ipynb
June-2022/: Answer-Key-June-2022.slides.html  Answer-Key-Trivia-France.ipynb  Answer-Key-Trivia-France.slides.html  Trivia-France-June-2022.slides.html
March-2021/: Answer-Key-March-2021.ipynb  March-2021.ipynb  March-2021.slides.html
app/: main.py  requirements.txt
content_updates/: .processed  content_update_2025_02_17_0121.json  content_update_2025_03_29_1837.json  new_questions_2025_02_15_2334.json  new_questions_2025_02_16_2339.json
docs/: CONTENT_WORKFLOW.md
e2e/: playwright.config.ts  tsconfig.json
frontend/: package-lock.json  (+2 more)
(+358 files in other folders)
