[project]
name = "trivia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black==25.1.0",
    "boto3>=1.38.9",
    "django==4.2.18",
    "django-filter==25.1",
    "django-storages>=1.14.6",
    "django-tinymce==4.1.0",
    "djangorestframework==3.16.0",
    "gspread==6.1.4",
    "gunicorn>=23.0.0",
    "numpy>=2.0.2",
    "oauth2client==4.1.3",
    "pandas>=2.1",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
]
