[project]
name = "trivia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black==26.3.1",
    "boto3>=1.38.9",
    "django>=5.2,<6.0",
    "django-allauth>=0.61.0",
    "django-filter==25.1",
    "django-ratelimit>=4.1.0",
    "django-storages>=1.14.6",
    "django-tinymce==4.1.0",
    "djangorestframework==3.16.0",
    "gspread==6.1.4",
    "gunicorn>=23.0.0",
    "numpy>=2.2",
    "oauth2client==4.1.3",
    "pandas>=2.1",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.2",
    "urllib3>=2.6.0",
]

[tool.black]
target-version = ["py313"]
