[project]
name = "trivia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black==26.5.1",
    "boto3>=1.43.54",
    "django>=5.2.16,<6.0",
    "django-allauth>=65.18.0",
    "django-filter==26.1",
    "django-ratelimit>=4.1.0",
    "django-storages>=1.14.6",
    "django-tinymce==5.0.0",
    "djangorestframework==3.17.1",
    "gspread==6.2.1",
    "gunicorn>=26.0.0",
    "numpy>=2.2.6",
    "oauth2client==4.1.3",
    "pandas>=2.3.3",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "urllib3>=2.7.0",
]

[tool.black]
target-version = ["py313"]
